--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-"Hello Thai Best Massage!" 
+<!DOCTYPE html>
+<html>
+<body>
+<h1>THAI BEST MASSAGE</h1>
+<p>THAI BEST MASSAGE is the best outcall massage in Bangkok, Thailand. <a href="https://www.thaibestmassage.com">best outcall massage in Bangkok</a></p>
+</body>
+</html>
