--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <body>
 <h1>THAI BEST MASSAGE</h1>
-<p>THAI BEST MASSAGE is the best outcall massage in Bangkok, Thailand. <a href="https://www.thaibestmassage.com">best outcall massage in Bangkok</a></p>
+<p>THAI BEST MASSAGE is the best mobile massage in Bangkok, Thailand. <a href="https://www.thaibestmassage.com">best hotel massage in Bangkok</a></p>
+
+<p>타이베스트마사지는 편리하게 고객님이 계시는 곳에서 마사지 서비스를 받을 수 있는 서비스입니다. <a href="https://www.thaibestmassage.com">최고의 방콕 마사지 서비스</a></p>
+
+
+<p>タイベストマッサージは便利にお客様の場所でマッサージを受けるサービスです。<a href="https://www.thaibestmassage.com">最高のバンコク・マッサージ</a></p>  
 </body>
 </html>
