--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
 <p>타이베스트마사지는 편리하게 고객님이 계시는 곳에서 마사지 서비스를 받을 수 있는 서비스입니다. <a href="https://www.thaibestmassage.com">최고의 방콕 마사지 서비스</a></p>
 
-
 <p>タイベストマッサージは便利にお客様の場所でマッサージを受けるサービスです。<a href="https://www.thaibestmassage.com">最高のバンコク・マッサージ</a></p>  
+
+<a href="https://lin.ee/nUKyOx2"><img src="/assets/images/contact/thai_best_massage_outcall_line_official_account.png" style="width:130px"></a>  
+  <p>ADD LINE to book!</p>
 </body>
 </html>
