--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <p>タイベストマッサージは便利にお客様の場所でマッサージを受けるサービスです。<a href="https://www.thaibestmassage.com">最高のバンコク・マッサージ</a></p>  
 
-<a href="https://lin.ee/nUKyOx2"><img src="/assets/images/contact/thai_best_massage_outcall_line_official_account.png" style="width:130px"></a>  
+<a href="https://lin.ee/nUKyOx2"><img src="https://www.thaibestmassage.com/assets/images/contact/thai_best_massage_outcall_line_official_account.png" style="width:130px"></a>  
   <p>ADD LINE to book!</p>
 </body>
 </html>
