--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 
 <a href="https://lin.ee/nUKyOx2"><img src="https://www.thaibestmassage.com/assets/images/contact/thai_best_massage_outcall_line_official_account.png" style="width:130px"></a>  
   <p>ADD LINE to book!</p>
+    <p>Line 메신저에서 예약해주세요.</p>
+    <p>LINEでお伺いします。</p>
 </body>
 </html>
