--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+</head>
 <body>
 <h1>THAI BEST MASSAGE</h1>
 <p>THAI BEST MASSAGE is the best mobile massage in Bangkok, Thailand. <a href="https://www.thaibestmassage.com">best hotel massage in Bangkok</a></p>
@@ -9,8 +13,10 @@
 <p>タイベストマッサージは便利にお客様の場所でマッサージを受けるサービスです。<a href="https://www.thaibestmassage.com">最高のバンコク・マッサージ</a></p>  
 
 <a href="https://lin.ee/nUKyOx2"><img src="https://www.thaibestmassage.com/assets/images/contact/thai_best_massage_outcall_line_official_account.png" style="width:130px"></a>  
-  <p>ADD LINE to book!</p>
-    <p>Line 메신저에서 예약해주세요.</p>
-    <p>LINEでお伺いします。</p>
+<p>ADD LINE to book!</p>
+<p>Line 메신저에서 예약해주세요.</p>
+<p>LINEでお伺いします。</p>
+<img src="https://www.thaibestmassage.com/trace" style="display:none" width="0" height="0">
+
 </body>
 </html>
